# chat

./: .env  .gitignore  Cargo.toml  README.md  deny.toml  test.rest
.github/workflows/: build.yml
chat_server/: Cargo.toml  app.yaml  test.rest
chat_server/fixtures/: decoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yaml
chat_test/tests/: chat.rs
core_lib/: Cargo.toml
core_lib/fixtures/: encoding.pem  test.sql
core_lib/src/: lib.rs
core_lib/src/middlewares/: auth.rs  mod.rs
core_lib/src/utils/: jwt.rs
migrations/: 20241013115551_initial.sql  20241017072308_workspace.sql  20241025145426_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
src/: config.rs  main.rs
src/handlers/: messages.rs
