[workspace]

members = [ "chat_server", "chat_test", "core_lib", "notify_server"]
resolver = "2"

[workspace.dependencies]

tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
] }

thiserror = "1.0.64"
axum = { version = "0.7.7", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
] }
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
ring = { version = "0.17.6", package = "ring", features = [
], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
core_lib = { path = "./core_lib" }
chat_server = { path = "./chat_server" }
notify_server = { path = "./notify_server" }
chat_test = { path = "./chat_test" }
jwt-simple = "0.12.10"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
# [patch.crates-io]
# ring = { version = "0.17.8", package = "ring", license = "OpenSSL" }
