[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.10"
serde_json = "1.0.128"

[dev-dependencies]
sqlx-db-tester = "0.5.0"
