[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\
[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = { workspace = true }
serde_json = "1.0.128"
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { version = "1.10.0", features = ["v8", "serde"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
sha1 = "0.10.6"
hex = "0.4.3"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
mime_guess = "2.0.5"
core_lib = { workspace = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
utoipa = { version = "5.1.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-axum = "0.1.1"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
