[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
core_lib = { workspace = true }
chat_server = { workspace = true, features = ["test-util"] }
notify_server = { workspace = true }
axum = { workspace = true, features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
    "stream",
] }
tokio = { workspace = true }
anyhow = { workspace = true }

[dependencies]
futures = "0.3.31"
reqwest-eventsource = "0.6.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
