[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]


tokio = { workspace = true }

thiserror = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
axum-extra = { workspace = true }
tokio-stream = "0.1.16"
futures = "0.3.31"
rand = "0.8.5"
sqlx = { workspace = true }
core_lib = { workspace = true }
